--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ https://templatemo.com/tm-560-astro-motion
                   <p class="mb-4">
                     This HTML template has a motion video background loop which is provided by <a rel="sponsored" href="https://getfreepictures.com" target="_blank">Get Free Pictures</a>. This is
                     one-page responsive layout for your websites. Feel
-                  free to use this for a commercial purpose. </p>
+    best engineer of my generation. </p>
                   <p class="mb-0">
                   You are not permitted to redistribute this template on your Free CSS collection websites. Please <a rel="nofollow" href="https://templatemo.com/contact" target="_blank">contact us</a> for more information. </p>
                 </div>
@@ -150,7 +150,7 @@ https://templatemo.com/tm-560-astro-motion
                     <img src="img/gallery-img-07.jpg" alt="Image">
                     <figcaption>
                         <div>
-                            <p>Julia dances in the deep dark</p>
+                            <p>Julia dances in the night club</p>
                         </div>
                         <a href="#">View more</a>
                     </figcaption>
